objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Accept_Reject__c</fullName>
        <label>Accept/Reject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>150.67</defaultValue>
        <label>Amount (Payment)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for SFS Demos</description>
        <label>CPQ Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Work Orders (CPQ Quote)</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Users_Work_Order__c</fullName>
        <formula>Contact.Id =  $User.ContactId</formula>
        <label>Current User&apos;s Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depot_Repair_Status__c</fullName>
        <label>Depot Repair Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Disassembly</fullName>
                </value>
                <value>
                    <fullName>Awaiting Authorization</fullName>
                </value>
                <value>
                    <fullName>Awaiting Parts</fullName>
                </value>
                <value>
                    <fullName>Repairing</fullName>
                </value>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlement_Is_Active__c</fullName>
        <formula>IF( (Entitlement.EndDate &gt; TODAY() || ISBLANK(Entitlement.EndDate)) &amp;&amp; NOT(ISBLANK(EntitlementId)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL_Is_Linked_To_Maintenance_Plan__c</fullName>
        <formula>NOT(ISBLANK(MaintenancePlanId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Linked To Maintenance Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Is_Linked_To_Service_Contract__c</fullName>
        <formula>NOT( ISBLANK( ServiceContractId ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Linked To Service Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Check__c</fullName>
        <label>Inventory Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Price_Consumed_Products__c</fullName>
        <label>Total Price (Consumed Products)</label>
        <summarizedField>ProductConsumed.Total_Price__c</summarizedField>
        <summaryForeignKey>ProductConsumed.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_End__c</fullName>
        <description>Time when the work on site is finished, also displayed in Service Report</description>
        <label>Work End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type__c</fullName>
        <label>Work Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Start__c</fullName>
        <description>Start time of the work on site to be displayed in the Service Report</description>
        <label>Work Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>temp_work_time__c</fullName>
        <label>temp work time</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Depot_Repairs</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Subject</columns>
        <columns>Depot_Repair_Status__c</columns>
        <columns>Priority</columns>
        <columns>PO_Number__c</columns>
        <columns>Expected_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Depot Repair</value>
        </filters>
        <filters>
            <field>Depot_Repair_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Depot Repairs</label>
    </listViews>
    <listViews>
        <fullName>Repairs_on_Hold_Awaiting_Authorization</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Subject</columns>
        <columns>Priority</columns>
        <columns>PO_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Depot Repair</value>
        </filters>
        <filters>
            <field>Depot_Repair_Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Authorization</value>
        </filters>
        <label>Repairs on Hold - Awaiting Authorization</label>
    </listViews>
    <listViews>
        <fullName>Repairs_on_Hold_Awaiting_Parts</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Subject</columns>
        <columns>Priority</columns>
        <columns>PO_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Depot Repair</value>
        </filters>
        <filters>
            <field>Depot_Repair_Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Parts</value>
        </filters>
        <label>Repairs on Hold - Awaiting Parts</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Work_Orders</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Users_Work_Order__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Upcoming Work Orders</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>sfsdg__All_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>StartDate</columns>
        <columns>EndDate</columns>
        <columns>WorkType</columns>
        <columns>ServiceTerritory</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>